--- a/demo/rating.html
+++ b/demo/rating.html
@@ -25,8 +25,8 @@
         );
 
         var starHtml ='<svg xmlns="http://www.w3.org/2000/svg" width="' + data.size + '" height="' + data.size + '" viewBox="0 0 100 100">' +
-            '<path d="M0,0 100,0 100,100 0,100 z" fill="' + data.starBg + '" />' +
-            '<path d="M0,0 ' + data.value + ",0 " + data.value + ',100 0,100 z" fill="' + data.valueBg + '" />' +
+            '<rect width="100" height="100" fill="' + data.starBg + '" />' +
+            '<rect width="' + data.value + '" height="100" fill="' + data.valueBg + '" />' +
             '<path d="M50,0 34,32 0,38 24,64 19,100 50,83 81,100 76,64 100,38 66,32 50,0 100,0 100,100 0,100 0,0 50,0" fill="' + data.containerBg + '" />' +
           "</svg>";
 
